resources/scss/_core.scss
:root {
    --main-green: #61b000;
    --main-lime: #EEEE13;
    --main-white: #fff;
}

// custom style variables LIGHT
$primary: #61b000;
$secondary: #d9d9d9;
$success: #61b000;
$info: #199fdd;
// $warning:       $yellow ;
$danger: #f50000;
// $light:         $gray-100 ;
// $dark:          $gray-900 ;

$border-width: calc(1px + 0.06dvw);

$body-emphasis-color: #61b000;

$font-family-sans-serif: 'Figtree', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
// $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;

// $btn-padding-y:               $input-btn-padding-y !default;
// $btn-padding-x:               $input-btn-padding-x !default;
// $btn-font-family:             $input-btn-font-family !default;
// $btn-font-size:               $input-btn-font-size !default;
// $btn-line-height:             $input-btn-line-height !default;
// $btn-white-space:             null !default; // Set to `nowrap` to prevent text wrapping

$btn-font-weight: 700;

// $btn-padding-y-sm:            $input-btn-padding-y-sm !default;
// $btn-padding-x-sm:            $input-btn-padding-x-sm !default;
// $btn-font-size-sm:            $input-btn-font-size-sm !default;

// $btn-padding-y-lg:            $input-btn-padding-y-lg !default;
// $btn-padding-x-lg:            $input-btn-padding-x-lg !default;
// $btn-font-size-lg:            $input-btn-font-size-lg !default;

// $btn-border-width:            $input-btn-border-width !default;

// $btn-focus-width:             $input-btn-focus-width !default;
// $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;

// $btn-active-box-shadow:       inset 0 3px 5px rgba($black, .125) !default;

// $input-focus-bg:                        $input-bg !default;
// $input-focus-border-color:              tint-color($component-active-bg, 50%) !default;
// $input-focus-color:                     $input-color !default;
// $input-focus-width:                     $input-btn-focus-width !default;
// $input-focus-box-shadow:                $input-btn-focus-box-shadow !default;

// $form-check-input-width:                  1em !default;
// $form-check-min-height:                   $font-size-base * $line-height-base !default;
// $form-check-padding-start:                $form-check-input-width + .5em !default;
// $form-check-margin-bottom:                .125rem !default;
// $form-check-label-color:                  null !default;
// $form-check-label-cursor:                 null !default;
// $form-check-transition:                   null !default;

// $form-check-input-active-filter:          brightness(90%) !default;

// $form-check-input-bg:                     $input-bg !default;
// $form-check-input-border:                 var(--#{$prefix}border-width) solid var(--#{$prefix}border-color) !default;
// $form-check-input-border-radius:          .25em !default;
// $form-check-radio-border-radius:          50% !default;
// $form-check-input-focus-border:           $input-focus-border-color !default;
// $form-check-input-focus-box-shadow:       $focus-ring-box-shadow !default;

// $form-check-input-checked-color:          $component-active-color !default;
// $form-check-input-checked-bg-color:       $component-active-bg !default;
// $form-check-input-checked-border-color:   $form-check-input-checked-bg-color !default;

// $form-check-input-indeterminate-color:          $component-active-color !default;
// $form-check-input-indeterminate-bg-color:       $component-active-bg !default;
// $form-check-input-indeterminate-border-color:   $form-check-input-indeterminate-bg-color !default;

// $form-switch-color:               rgba($black, .25) !default;
// $form-switch-width:               2em !default;
// $form-switch-padding-start:       $form-switch-width + .5em !default;
// $form-switch-bg-image:            url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$form-switch-color}'/></svg>") !default;
// $form-switch-border-radius:       $form-switch-width !default;
// $form-switch-transition:          background-position .15s ease-in-out !default;

// $form-switch-focus-color:         $input-focus-border-color !default;
// $form-switch-focus-bg-image:      url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$form-switch-focus-color}'/></svg>") !default;

// $form-switch-checked-color:       $component-active-color !default;
// $form-switch-checked-bg-image:    url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='#{$form-switch-checked-color}'/></svg>") !default;
// $form-switch-checked-bg-position: right center !default;

// custom style variables DARK todo
// dark variable location is in ../../node_modules/bootstrap/scss/_variables-dark.scss

@import '../../vendor/node_modules/bootstrap/scss/bootstrap';
// @import 'button';

@mixin max-width($value) {
    // $value: min($value, 100);
    max-width: #{$value}+"%";
    max-width: #{$value}vw;
    max-width: #{$value}dvw;
}

@mixin min-width($value) {
    // $value: min($value, 100);
    min-width: #{$value}+"%";
    min-width: #{$value}vw;
    min-width: #{$value}dvw;
}

@mixin max-height($value) {
    // $value: min($value, 100);
    max-height: #{$value}+"%";
    max-height: #{$value}vh;
    max-height: #{$value}dvh;
}

@mixin min-height($value) {
    // $value: min($value, 100);
    min-height: #{$value}+"%";
    min-height: #{$value}vh;
    min-height: #{$value}dvh;
}

@mixin line-clamp-y($max-line-clamp) {
    --max-line-clamp: #{$max-line-clamp};
    display: -webkit-box;
    line-clamp: var(--max-line-clamp);
    -webkit-line-clamp: var(--max-line-clamp);
    -webkit-box-orient: vertical;
    text-overflow: ellipsis;
    overflow: hidden;
}


*,
*::before,
*::after {
    font-size: var(--base-font-size);
    box-sizing: border-box;
}

html {
    @include min-height(100);
    @include max-width(100);

}

body {
    position: relative;
    display: flex;
    flex-direction: column;
    @include min-height(100);
    @include max-width(100);
    overflow-y: auto;

}

